--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     padding: 0px;
     margin: 0px;
   }
-  body{
+  main{
     background: #FFF;
   }
   header{
@@ -36,7 +36,7 @@
     color: #3A3A3A;
   }
   nav > ul{
-    display: flex;  
+    display: flex;
   }
   nav li,img{
     list-style: none;
@@ -93,6 +93,112 @@
     align-items: center;
     gap: 40px;
   }
+  /* popular-section */
+  .popular-section{
+    padding: 0px 200px;
+  }
+  .popular-title{
+    font-size: 1.75rem;
+    font-weight: 600;
+    color: #3A3A3A;
+    text-align: center;
+  }
+  .popular-card-container{
+    padding-top: 30px;
+    padding-left: 100px;
+    padding-bottom: 60px;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(3,1fr);
+    
+  }
+  .card{
+    width: 329px;
+    height: 476px;
+    padding: 16px 15px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    
+  }
+  .card-title{
+    font-size: 1.75rem;
+    font-weight: 500;
+    color: #18191F;
+  }
+  .card-price{
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+  }
+  .card-p{
+    width: 196px;
+    font-family: Inter;
+    font-size: 0.87rem;
+    font-weight: 700;
+    color: #787885;
+    padding-top: 10px;
+  }
+  .popular-ancor{
+    display: inline-flex;
+    align-items: center;
+    float: right;
+    padding-right: 80px;
+  }
+  .popular-ancor > a{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #E02C6D;
+  }
+
+  /* feature */
+  .feature{
+    padding: 100px 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .feature-title{
+    font-size: 2.375rem;
+    color: #0A0826;
+    font-weight: 700;
+  }
+  .feature-p-section{
+  width: 501px;
+  height: 88px;
+  }
+  .feature-p{
+    font-size: 1rem;
+    font-weight: 700;
+    color: #6C6C6C;
+  }
+  .btn{
+    border-radius: 0px;
+  }
+
+  /* footer */
+  footer{
+    background-color: #0A0826;
+    padding: 50px;
+  }
+  .footer-title{
+    color: #FFF;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+  }
+  .footer-p{
+    font-family: Manrope;
+    font-weight: 700;
+    font-size: 0.86rem;
+    color: #FFF;
+    text-align: center;
+    padding: 3px;
+  }
+  .footer-icon{
+    text-align: center;
+  }
 
   /* responsive */
   @media screen and (max-width:675px) {
@@ -102,7 +208,8 @@
     nav{
         flex-direction: column;
     }
-    .banner{
+    .banner,
+    .feature{
         flex-direction: column-reverse;
     }
     .banner-content{
@@ -111,7 +218,33 @@
     .banner-title{
         font-size: 1.75rem;
     }
+    .popular-title{
+      font-size: 1rem;
+    }
+    .popular-card-container{
+      grid-template-columns: 1fr;
+      padding-right: 90px;
+    }
+  .popular-ancor{
+    padding: 0px;
+  }
+    .feature-title{
+      font-size: 1.5rem;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .feature-p{
+      text-align: center;
+      font-size: 1rem;
+    }
+    .btn{
+      margin: 0 150px;
+    }
+    .sponsors{
+      padding: 0px 30px;
+    }
     .sponsors-img-container{
-        
+      flex-wrap: wrap;
+      gap: 5px;
     }
   }
